<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.bettervillagers</groupId>
    <artifactId>BetterVillagers</artifactId>
    <version>1.0.1</version>
    <packaging>jar</packaging>

    <name>BetterVillagers</name>
    <description>赋予 Minecraft 村民智能 AI 行为系统</description>

    <properties>
        <java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- 依赖版本台账（规范 0.2/0.3：显式锁定版本号，避免传递依赖漂移） -->
        <!-- folia-api 与 FoliaLib 锁定同一基线，避免规范明确警告的依赖漂移；
             folia-api 为 paper-api 的超集，编译期可访问区域调度器类 -->
        <folia-api.version>26.1.2.build.8-stable</folia-api.version>
        <folialib.version>1.3.2</folialib.version>
        <caffeine.version>3.1.8</caffeine.version>
        <hikaricp.version>6.2.1</hikaricp.version>
        <sqlite-jdbc.version>3.47.1.0</sqlite-jdbc.version>
        <craft-engine.version>26.7.4</craft-engine.version>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <finalName>${project.name}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <!-- 规范 0.2：shade 插件内置 ASM 不支持 Java 25（class file 69），
                     显式覆盖为 ASM 9.10.1（支持 Opcodes.V25）以完成 relocation 处理 -->
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>9.10.1</version>
                    </dependency>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm-commons</artifactId>
                        <version>9.10.1</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <minimizeJar>false</minimizeJar>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>module-info.class</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <artifactSet>
                                <includes>
                                    <include>cn.handyplus.lib.adapter:FoliaLib</include>
                                    <include>com.github.ben-manes.caffeine:caffeine</include>
                                    <include>com.zaxxer:HikariCP</include>
                                    <include>org.xerial:sqlite-jdbc</include>
                                </includes>
                            </artifactSet>
                            <relocations>
                                <relocation>
                                    <pattern>cn.handyplus.lib.adapter</pattern>
                                    <shadedPattern>dev.bettervillagers.lib.folialib</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.github.benmanes.caffeine</pattern>
                                    <shadedPattern>dev.bettervillagers.lib.caffeine</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.zaxxer.hikari</pattern>
                                    <shadedPattern>dev.bettervillagers.lib.hikari</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.sqlite</pattern>
                                    <shadedPattern>dev.bettervillagers.lib.sqlite</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>structures/**</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>structures/**</include>
                </includes>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://central.sonatype.com/repository/maven-public/</url>
        </repository>
        <repository>
            <id>momirealms-repo</id>
            <url>https://repo.momirealms.net/releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- 编译基准 API：folia-api（paper-api 超集，含区域调度器类） -->
        <dependency>
            <groupId>dev.folia</groupId>
            <artifactId>folia-api</artifactId>
            <version>${folia-api.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Paper/Folia 统一调度抽象（规范 0.1 推荐） -->
        <dependency>
            <groupId>cn.handyplus.lib.adapter</groupId>
            <artifactId>FoliaLib</artifactId>
            <version>${folialib.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- 高性能本地缓存（AI 决策/交易价格缓存，规范 1.3） -->
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>${caffeine.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- 数据库连接池（规范 8.x） -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>${hikaricp.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- SQLite 嵌入式数据库驱动 -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>${sqlite-jdbc.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Gson：JSON 序列化（服务端运行时提供，provided 避免重复打包） -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- CraftEngine 稳定 API：由服务端的 CraftEngine 插件提供，禁止打包进本插件 -->
        <dependency>
            <groupId>net.momirealms</groupId>
            <artifactId>craft-engine-core</artifactId>
            <version>${craft-engine.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.momirealms</groupId>
            <artifactId>craft-engine-bukkit</artifactId>
            <version>${craft-engine.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
